fix(village): stop config screen crash on first Tab press
Vanilla's ContainerEventHandler#changeFocus always calls
children().indexOf(getFocused()) even before anything is focused, and
java.util.List.of(...) throws NullPointerException on indexOf(null)
(unlike Collections.emptyList()/singletonList(), which return -1). Every
config screen entry's children() returned List.of(...), so pressing Tab
before clicking into a field crashed the game on every shipped version
(1.21.1+) except 1.16.5's yet-to-ship backport, which already used
Collections.* there for Java 8 compatibility. Switches all of them to
Collections.emptyList()/singletonList().

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>